unpackaged/main/default/objects/Service_Type_Member__c/Service_Type_Member__c.object-meta.xml
<CustomObject>
    <label>Service Type Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Type Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>