unpackaged/main/default/objects/Service_Type_Member__c/fields/Service_Member_Guided_Choice__c.field-meta.xml
<CustomField>
    <fullName>Service_Member_Guided_Choice__c</fullName>
    <formula>TEXT( Service_Type__r.Guided_Selection__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Member Guided Choice</label>
    <type>Text</type>
</CustomField>