unpackaged/main/default/objects/Service_Type_Member__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Service Type Members</relationshipLabel>
    <relationshipName>Service_Type_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>