unpackaged/main/default/objects/Service_Type_Member__c/fields/Sub_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Customer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Sub Customer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Type Members</relationshipLabel>
    <relationshipName>Service_Type_Members</relationshipName>
    <type>Lookup</type>
</CustomField>