unpackaged/main/default/objects/Service_Type_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sub_Customer__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Member_Guided_Choice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>